[tool.poetry]
name = "user-management-backend-system"
version = "0.1.0"
description = "user management system made out of simple fastapi app and performed crud operation to conclude the nature of compute time monitor of this framework"
authors = ["imamtagupta"]
readme = "README.md"
packages = [{include = "user_management_backend_system"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
